# test_coverage_project

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: check.yml
test_coverage_project/: common_conditions.py  common_functions.py  main_code.py
test_coverage_project/scripts/: run_project.py
